--- a/pages/winprob/templates/excitement_list.html
+++ b/pages/winprob/templates/excitement_list.html
@@ -2,8 +2,8 @@
 
 {% block title %}Most exciting ties{% endblock %}
 {% block headline %}Most exciting ties{% endblock %}
+{% block nosubhead %}{% endblock %}
 {% block nodesc %}
 <p>The 100 two-legged ties with the most excitement, measured by how far the win probability traveled throughout the course of the tie.</p>
 <p>Other metrics: <a href="{% url 'comebacklist' %}">Comeback</a> | Excitement | <a href="{% url 'tensionlist' %}">Tension</a></p>
 {% endblock %}
-{% block tiesactive %}active{% endblock %}
