--- a/pages/winprob/templates/team_detail.html
+++ b/pages/winprob/templates/team_detail.html
@@ -7,7 +7,6 @@
 {% block teamsactive %}active{% endblock %}
 
 {% block content %}
-
+{% include "tie_legend.html" %}
 {% include "tie_loop.html" with source_template='team' %}
-
 {% endblock %}
