--- a/pages/winprob/templates/tension_list.html
+++ b/pages/winprob/templates/tension_list.html
@@ -2,6 +2,7 @@
 
 {% block title %}Most tense ties{% endblock %}
 {% block headline %}Most tense ties{% endblock %}
+{% block nosubhead %}{% endblock %}
 {% block nodesc %}
 <p>The 100 two-legged ties with the most tension, measured by how close the win probability stayed to 50% throughout the tie.</p>
 <p>Other metrics: <a href="{% url 'comebacklist' %}">Comeback</a> | <a href="{% url 'excitementlist' %}">Excitement</a> | Tension</p>
