--- a/pages/winprob/templates/ties_list.html
+++ b/pages/winprob/templates/ties_list.html
@@ -4,5 +4,6 @@
 {% block nosubhead %}{% endblock %}
 
 {% block content %}
-  {% include "tie_loop.html" %}
+{% include "tie_legend.html" %}
+{% include "tie_loop.html" %}
 {% endblock %}
