--- a/pages/winprob/templates/agr_list.html
+++ b/pages/winprob/templates/agr_list.html
@@ -1,6 +1,6 @@
 {% extends "ties_list.html" %}
 
-{% block title %}Ties decided by away-goals rule{% endblock %}
-{% block headline %}Away-goals rule{% endblock %}
+{% block title %}Ties decided by away goals rule{% endblock %}
+{% block headline %}Away goals rule{% endblock %}
 {% block nosubhead %}{% endblock %}
-{% block desc %}A list of {{ ties|length }} ties where the away-goals rule broke a deadlock in scoring.{% endblock %}
+{% block desc %}A list of {{ ties|length }} ties where the away goals rule broke a deadlock.{% endblock %}
